@@ -1,3 +1,8 @@
+2002-03-20  Kevin Vandersloot <kfv101@psu.edu>
+
+	* actions.c: Use gtk_text_buffer_set_text. May fix 
+	a crash. Also don't cast the textview to a gtkeditable
+
 2002-03-15  Ganesan Sethuraman <ganesan.sethuraman@wipro.com>
 
        * log_repaint.c: Fixed the display of the status bar when the
